# 10xHack

./: Claude_pull.ipynb  Jargone.pptx  README.md  pyproject.toml
data/: test.py  test_data.csv
src/: main.py  streamlit_frontend.py
